// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Button in desktop screen 1`] = `
<div
  className="MuiBox-root-1tpdhdx MuiBox-root-6"
>
  <div
    className="MuiBox-root-1tpdhdx MuiBox-root-7"
  >
    <button
      className="MuiButtonBase-root-w0iq0r MuiButton-root-1w8onii MuiButton-contained-fuk1bb MuiButton-containedPrimary-1qpv2y6"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1ufm4pj"
      >
        Hower
      </span>
      <span
        className="MuiTouchRipple-root-s3wr0d"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-1tpdhdx MuiBox-root-8"
  >
    <button
      className="MuiButtonBase-root-w0iq0r MuiButtonBase-disabled-1gn1rpx MuiButton-root-1w8onii MuiButton-contained-fuk1bb MuiButton-containedPrimary-1qpv2y6 MuiButton-disabled-1gn1rpx"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-1ufm4pj"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1tpdhdx MuiBox-root-9"
  >
    <button
      className="MuiButtonBase-root-w0iq0r MuiButton-root-1w8onii MuiButton-contained-fuk1bb MuiButton-containedSecondary-10u561l"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1ufm4pj"
      >
        Cancel
      </span>
      <span
        className="MuiTouchRipple-root-s3wr0d"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-1tpdhdx MuiBox-root-10"
  >
    <button
      className="MuiButtonBase-root-w0iq0r MuiButton-root-1w8onii MuiButton-contained-fuk1bb MuiButton-containedPrimary-1qpv2y6 MuiButton-fullWidth-1vofuqe"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1ufm4pj"
      >
        Full Width
      </span>
      <span
        className="MuiTouchRipple-root-s3wr0d"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Button Button in phone screen 1`] = `
<div
  style={
    Object {
      "width": "425px",
    }
  }
>
  <div
    className="MuiBox-root-1tpdhdx MuiBox-root-1"
  >
    <div
      className="MuiBox-root-1tpdhdx MuiBox-root-2"
    >
      <button
        className="MuiButtonBase-root-w0iq0r MuiButton-root-1w8onii MuiButton-contained-fuk1bb MuiButton-containedPrimary-1qpv2y6"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-1ufm4pj"
        >
          Hower
        </span>
        <span
          className="MuiTouchRipple-root-s3wr0d"
        />
      </button>
    </div>
    <div
      className="MuiBox-root-1tpdhdx MuiBox-root-3"
    >
      <button
        className="MuiButtonBase-root-w0iq0r MuiButtonBase-disabled-1gn1rpx MuiButton-root-1w8onii MuiButton-contained-fuk1bb MuiButton-containedPrimary-1qpv2y6 MuiButton-disabled-1gn1rpx"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label-1ufm4pj"
        >
          Disabled
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-1tpdhdx MuiBox-root-4"
    >
      <button
        className="MuiButtonBase-root-w0iq0r MuiButton-root-1w8onii MuiButton-contained-fuk1bb MuiButton-containedSecondary-10u561l"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-1ufm4pj"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-s3wr0d"
        />
      </button>
    </div>
    <div
      className="MuiBox-root-1tpdhdx MuiBox-root-5"
    >
      <button
        className="MuiButtonBase-root-w0iq0r MuiButton-root-1w8onii MuiButton-contained-fuk1bb MuiButton-containedPrimary-1qpv2y6 MuiButton-fullWidth-1vofuqe"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-1ufm4pj"
        >
          Full Width
        </span>
        <span
          className="MuiTouchRipple-root-s3wr0d"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components /TextFieldForm Examples 1`] = `
<div
  className="MuiBox-root-1tpdhdx MuiBox-root-11"
>
  <div
    className="MuiBox-root-1tpdhdx MuiBox-root-12"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1nb8hkj MuiFormControl-marginNormal-xfc5ur MuiTextField-root-nenw30"
      >
        <label
          className="MuiFormLabel-root-1kws992 MuiFormLabel-error-17x99dr MuiInputLabel-error-rc5wiw MuiInputLabel-root-1dpbk2t MuiInputLabel-formControl-1a3k55t MuiInputLabel-animated-11c16tv MuiInputLabel-shrink-uhqsgf"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root-1swcov8 MuiOutlinedInput-root-a0520f MuiInputBase-error-17x99dr MuiOutlinedInput-error-4ffa4b MuiInputBase-formControl-6vi063"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-tl7gwz MuiOutlinedInput-notchedOutline-1sxl3t1"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-1b37ak6"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input-tw450p MuiOutlinedInput-input-zno4lu"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root-17hd17g MuiFormHelperText-contained-oonh43 MuiFormHelperText-error-17x99dr"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-1tpdhdx MuiBox-root-13"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1nb8hkj MuiFormControl-marginNormal-xfc5ur MuiTextField-root-nenw30"
      >
        <label
          className="MuiFormLabel-root-1kws992 MuiInputLabel-root-1dpbk2t MuiInputLabel-formControl-1a3k55t MuiInputLabel-animated-11c16tv MuiInputLabel-shrink-uhqsgf"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root-1swcov8 MuiOutlinedInput-root-a0520f MuiInputBase-formControl-6vi063"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-tl7gwz MuiOutlinedInput-notchedOutline-1sxl3t1"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-1b37ak6"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-tw450p MuiOutlinedInput-input-zno4lu"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-1tpdhdx MuiBox-root-14"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1nb8hkj MuiFormControl-marginNormal-xfc5ur MuiTextField-root-nenw30"
      >
        <label
          className="MuiFormLabel-root-1kws992 MuiFormLabel-disabled-1gn1rpx MuiInputLabel-disabled-1gn1rpx MuiInputLabel-root-1dpbk2t MuiInputLabel-formControl-1a3k55t MuiInputLabel-animated-11c16tv MuiInputLabel-shrink-uhqsgf"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root-1swcov8 MuiOutlinedInput-root-a0520f MuiInputBase-disabled-1gn1rpx MuiOutlinedInput-disabled-1gn1rpx MuiInputBase-formControl-6vi063"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-tl7gwz MuiOutlinedInput-notchedOutline-1sxl3t1"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-1b37ak6"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-tw450p MuiOutlinedInput-input-zno4lu MuiInputBase-disabled-1gn1rpx MuiOutlinedInput-disabled-1gn1rpx"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-1tpdhdx MuiBox-root-15"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-1nb8hkj MuiFormControl-marginNormal-xfc5ur MuiTextField-root-nenw30"
      >
        <label
          className="MuiFormLabel-root-1kws992 MuiInputLabel-root-1dpbk2t MuiInputLabel-formControl-1a3k55t MuiInputLabel-animated-11c16tv MuiInputLabel-shrink-uhqsgf"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-1swcov8 MuiOutlinedInput-root-a0520f MuiInputBase-formControl-6vi063"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-tl7gwz MuiOutlinedInput-notchedOutline-1sxl3t1"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-1b37ak6"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-tw450p MuiOutlinedInput-input-zno4lu"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Components /forms Add react-final-form-hooks form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-1nb8hkj MuiFormControl-marginNormal-xfc5ur MuiTextField-root-nenw30"
  >
    <label
      className="MuiFormLabel-root-1kws992 MuiInputLabel-root-1dpbk2t MuiInputLabel-formControl-1a3k55t MuiInputLabel-animated-11c16tv MuiInputLabel-shrink-uhqsgf"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-1swcov8 MuiOutlinedInput-root-a0520f MuiInputBase-formControl-6vi063"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-tl7gwz MuiOutlinedInput-notchedOutline-1sxl3t1"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-1b37ak6"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-tw450p MuiOutlinedInput-input-zno4lu"
        disabled={false}
        name="uniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-w0iq0r MuiButtonBase-disabled-1gn1rpx MuiButton-root-1w8onii MuiButton-contained-fuk1bb MuiButton-containedPrimary-1qpv2y6 MuiButton-disabled-1gn1rpx"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-1ufm4pj"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Image Images 1`] = `
<img
  alt="Iov Logo"
  className="Hook-root-z8j3qi"
  src="iov-logo.png"
/>
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root-1tpdhdx MuiBox-root-16"
  id="/signup_first"
>
  <h4
    className="MuiTypography-root-91g352 MuiTypography-h4-17jbvzq MuiTypography-colorPrimary-10w5l6 Hook-inline-42z04s"
  >
    New
  </h4>
  <h4
    className="MuiTypography-root-91g352 MuiTypography-h4-17jbvzq Hook-inline-42z04s"
  >
     Account
  </h4>
  <div
    className="MuiBox-root-1tpdhdx MuiBox-root-17"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-1tpdhdx MuiBox-root-18"
      >
        <div
          className="MuiFormControl-root-1nb8hkj MuiFormControl-marginNormal-xfc5ur MuiFormControl-fullWidth-1vofuqe MuiTextField-root-nenw30"
        >
          <label
            className="MuiFormLabel-root-1kws992 MuiFormLabel-required-1uq7ql3 MuiInputLabel-required-1uq7ql3 MuiInputLabel-root-1dpbk2t MuiInputLabel-formControl-1a3k55t MuiInputLabel-animated-11c16tv MuiInputLabel-shrink-uhqsgf"
            data-shrink={true}
          >
            Username
            <span
              className="MuiFormLabel-asterisk-12z5567 MuiInputLabel-asterisk-1nskzoe"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-1swcov8 MuiOutlinedInput-root-a0520f MuiInputBase-fullWidth-1vofuqe MuiInputBase-formControl-6vi063"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-tl7gwz MuiOutlinedInput-notchedOutline-1sxl3t1"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1b37ak6"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-tw450p MuiOutlinedInput-input-zno4lu"
              disabled={false}
              name="usernameInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Username"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1tpdhdx MuiBox-root-19"
      >
        <div
          className="MuiFormControl-root-1nb8hkj MuiFormControl-marginNormal-xfc5ur MuiFormControl-fullWidth-1vofuqe MuiTextField-root-nenw30"
        >
          <label
            className="MuiFormLabel-root-1kws992 MuiFormLabel-required-1uq7ql3 MuiInputLabel-required-1uq7ql3 MuiInputLabel-root-1dpbk2t MuiInputLabel-formControl-1a3k55t MuiInputLabel-animated-11c16tv MuiInputLabel-shrink-uhqsgf"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk-12z5567 MuiInputLabel-asterisk-1nskzoe"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-1swcov8 MuiOutlinedInput-root-a0520f MuiInputBase-fullWidth-1vofuqe MuiInputBase-formControl-6vi063"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-tl7gwz MuiOutlinedInput-notchedOutline-1sxl3t1"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1b37ak6"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-tw450p MuiOutlinedInput-input-zno4lu MuiInputBase-inputType-e09jth"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1tpdhdx MuiBox-root-20"
      >
        <div
          className="MuiFormControl-root-1nb8hkj MuiFormControl-marginNormal-xfc5ur MuiFormControl-fullWidth-1vofuqe MuiTextField-root-nenw30"
        >
          <label
            className="MuiFormLabel-root-1kws992 MuiFormLabel-required-1uq7ql3 MuiInputLabel-required-1uq7ql3 MuiInputLabel-root-1dpbk2t MuiInputLabel-formControl-1a3k55t MuiInputLabel-animated-11c16tv MuiInputLabel-shrink-uhqsgf"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk-12z5567 MuiInputLabel-asterisk-1nskzoe"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-1swcov8 MuiOutlinedInput-root-a0520f MuiInputBase-fullWidth-1vofuqe MuiInputBase-formControl-6vi063"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-tl7gwz MuiOutlinedInput-notchedOutline-1sxl3t1"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1b37ak6"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-tw450p MuiOutlinedInput-input-zno4lu MuiInputBase-inputType-e09jth"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1tpdhdx MuiBox-root-21"
      >
        <button
          className="MuiButtonBase-root-w0iq0r MuiButtonBase-disabled-1gn1rpx MuiButton-root-1w8onii MuiButton-contained-fuk1bb MuiButton-containedPrimary-1qpv2y6 MuiButton-disabled-1gn1rpx"
          disabled={true}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="-1"
          type="submit"
        >
          <span
            className="MuiButton-label-1ufm4pj"
          >
            Continue
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-1tpdhdx MuiBox-root-22"
  >
    <img
      alt="IOV logo"
      className="Hook-root-z8j3qi"
      src="iov-logo.png"
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root-1tpdhdx MuiBox-root-23"
  id="/signup_second"
>
  <h4
    className="MuiTypography-root-91g352 MuiTypography-h4-17jbvzq MuiTypography-colorPrimary-10w5l6 Hook-inline-42z04s"
  >
    Recovery
  </h4>
  <h4
    className="MuiTypography-root-91g352 MuiTypography-h4-17jbvzq Hook-inline-42z04s"
  >
     Phrase
  </h4>
  <div
    className="MuiBox-root-1tpdhdx MuiBox-root-24"
  >
    <div
      className="MuiBox-root-1tpdhdx MuiBox-root-25"
    >
      <p
        className="MuiTypography-root-91g352 MuiTypography-body1-ipo4gk Hook-inline-42z04s"
      >
        organ wheat manage mirror wish truly tool trumpet since equip flight bracket
      </p>
    </div>
  </div>
  <div
    className="MuiBox-root-1tpdhdx MuiBox-root-26"
  >
    <button
      className="MuiButtonBase-root-w0iq0r MuiButton-root-1w8onii MuiButton-contained-fuk1bb MuiButton-containedPrimary-1qpv2y6"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-1ufm4pj"
      >
        Create
      </span>
      <span
        className="MuiTouchRipple-root-s3wr0d"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-1tpdhdx MuiBox-root-27"
  >
    <img
      alt="IOV logo"
      className="Hook-root-z8j3qi"
      src="iov-logo.png"
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-1tpdhdx MuiBox-root-28"
  id="/welcome"
>
  <h4
    className="MuiTypography-root-91g352 MuiTypography-h4-17jbvzq MuiTypography-colorPrimary-10w5l6 Hook-inline-42z04s"
  >
    Welcome
  </h4>
  <h4
    className="MuiTypography-root-91g352 MuiTypography-h4-17jbvzq Hook-inline-42z04s"
  >
     to your IOV manager
  </h4>
  <div
    className="MuiBox-root-1tpdhdx MuiBox-root-29"
  >
    <p
      className="MuiTypography-root-91g352 MuiTypography-body1-ipo4gk Hook-inline-42z04s"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-1tpdhdx MuiBox-root-30"
    />
    <button
      className="MuiButtonBase-root-w0iq0r MuiButton-root-1w8onii MuiButton-contained-fuk1bb MuiButton-containedPrimary-1qpv2y6 MuiButton-fullWidth-1vofuqe welcome-view-buttons"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-1ufm4pj"
      >
        Log in
      </span>
      <span
        className="MuiTouchRipple-root-s3wr0d"
      />
    </button>
    <div
      className="MuiBox-root-1tpdhdx MuiBox-root-31"
    />
    <button
      className="MuiButtonBase-root-w0iq0r MuiButton-root-1w8onii MuiButton-contained-fuk1bb MuiButton-containedPrimary-1qpv2y6 MuiButton-fullWidth-1vofuqe welcome-view-buttons"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-1ufm4pj"
      >
        New account
      </span>
      <span
        className="MuiTouchRipple-root-s3wr0d"
      />
    </button>
    <div
      className="MuiBox-root-1tpdhdx MuiBox-root-32"
    />
    <button
      className="MuiButtonBase-root-w0iq0r MuiButton-root-1w8onii MuiButton-contained-fuk1bb MuiButton-containedPrimary-1qpv2y6 MuiButton-fullWidth-1vofuqe welcome-view-buttons"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="contained"
    >
      <span
        className="MuiButton-label-1ufm4pj"
      >
        Import account
      </span>
      <span
        className="MuiTouchRipple-root-s3wr0d"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-1tpdhdx MuiBox-root-33"
  >
    <img
      alt="IOV logo"
      className="Hook-root-z8j3qi"
      src="iov-logo.png"
    />
  </div>
</div>
`;

exports[`Storyshots Typography Styles 1`] = `
Array [
  <h6
    className="MuiTypography-root-91g352 MuiTypography-subtitle1-aexct9 MuiTypography-colorPrimary-10w5l6"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root-91g352 MuiTypography-h4-17jbvzq"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root-91g352 MuiTypography-subtitle1-aexct9 MuiTypography-colorPrimary-10w5l6"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root-91g352 MuiTypography-h5-gxvpuz"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root-91g352 MuiTypography-subtitle1-aexct9 MuiTypography-colorPrimary-10w5l6"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root-91g352 MuiTypography-h6-6iwqkx"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root-91g352 MuiTypography-subtitle1-aexct9 MuiTypography-colorPrimary-10w5l6"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root-91g352 MuiTypography-body1-ipo4gk"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-91g352 MuiTypography-subtitle1-aexct9 MuiTypography-colorPrimary-10w5l6"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root-91g352 MuiTypography-body2-ez86gr"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-91g352 MuiTypography-subtitle1-aexct9 MuiTypography-colorPrimary-10w5l6"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root-91g352 MuiTypography-subtitle1-aexct9"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-91g352 MuiTypography-subtitle1-aexct9 MuiTypography-colorPrimary-10w5l6"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root-91g352 MuiTypography-subtitle2-xuzflv"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-91g352 MuiTypography-subtitle1-aexct9 MuiTypography-colorPrimary-10w5l6"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root-91g352 MuiTypography-subtitle2-xuzflv MuiTypography-colorPrimary-10w5l6 Hook-inline-42z04s"
  >
    First part of the text. 
  </h6>,
  <h6
    className="MuiTypography-root-91g352 MuiTypography-subtitle2-xuzflv Hook-inline-42z04s"
  >
    Second part of the text.
  </h6>,
]
`;
